# cli

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: release.yml
src/: config.rs  lib.rs  main.rs  service.rs
tests/: cli_init.rs
