[package]
name = "mycelial"
version = "0.1.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
reqwest = "0.11.22"
flate2 = "1.0.28"
tokio = { version = "1", features = ["full"] }
tar = { package = "binstall-tar", version = "0.4.39" }
inquire = "0.6.2"
toml = "0.8.2"
dirs = "5.0"
nix = { version = "0.27.1", features = ["signal"] }
colored = "2"
